--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,9 @@ section {
     align-self: center;
   }
 }
+.thoughts-page {
+  position: relative;
+}
 /* ===============================
    Wandering Thoughts (Subtle)
 ================================ */
